--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,17 +21,10 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
+  font-weight: 300;
+  row;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-
-nav {
-  color: #545149;
-  background-color: #f4f1ec;
-  font-size: 24px;
-  font-family: "Bungee", sans-serif;
-  font-weight: 400;
-}
