--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,7 @@ header {
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  background-color: linen;
+  background-color: #f4f1ec;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   margin-top: 120px;
 }
