--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,10 +21,16 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: "Source Sans Pro", sans-serif;
-  font-weight: 300;
-  row;
+  font-weight: 600;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+main {
+  display: flex;
+  align-items: center;
+  width: 90%;
+  background-color: #f4f1ec;
+}
