--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,8 +13,7 @@ span {
   display: flex;
   align-self: center;
   font-family: "Bungee", cursive;
-  margin-left: 1.5em;
-  margin-right: 1.5em;
+  padding: 1.5em;
 }
 
 .a {
@@ -24,10 +23,7 @@ span {
 
 .b {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
   font-family: "Source Sans Pro", sans-serif;
-  font-weight: 300;
-  margin-left: 1.5em;
-  margin-right: 1.5em;
 }
