--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -13,7 +13,7 @@
 .new-tweet textarea {
   display: flex;
   flex-direction: column;
-  height: 40px;
+  height: 65px;
   width: 100%;
   outline: none;
   border-style: none;
@@ -40,4 +40,8 @@
 
 .new-tweet output {
   display: flex;
+}
+
+.exceedCharLimit {
+  color: red;
 }
