--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,6 +30,7 @@ body {
 
 main {
   display: flex;
+  justify-content: center;
   align-items: center;
   width: 90%;
   background-color: #f4f1ec;
