--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,7 +5,25 @@
   padding: 1.5em;
 }
 
-.new-text form {
+.new-tweet h2 {
+  margin-block: 0.5em;
+}
+
+.new-tweet span {
+  display: flex;
+  font-family: "Source Sans Pro", sans-serif;
+  color: red;
+  padding: 5px;
+  border-style: solid;
+  margin-bottom: 0.5em;
+}
+
+.new-tweet i {
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+}
+
+.new-tweet form {
   display: flex;
   flex-direction: column;
 }
