--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -1,6 +1,7 @@
 section#tweets-container {
   display: flex;
   flex-direction: column;
+  width: 100%;
   padding: 1.5em;
 }
 
@@ -64,7 +65,7 @@ i:hover {
 
 span.timeago {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 75%;
+  font-size: 60%;
 }
 
 i.fas.fa-retweet {
