--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,7 +2,7 @@ header {
   height: 400px;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   background-color: #f4f1ec;
