--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,8 +30,23 @@ body {
 
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  width: 90%;
+  width: 100%;
   background-color: #f4f1ec;
+}
+
+@media only screen and (min-width: 1024px) {
+  .header {
+    float: left;
+    width: 40%;
+    position: fixed;
+    height: 600px;
+  }
+  .container {
+    float: right;
+    width: 60%;
+    flex-direction: column;
+    margin-top: 120px;
+  }
 }
