--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,10 +2,17 @@ header {
   height: 400px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-  background-color: #f4f1ec;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   margin-top: 120px;
+}
+
+h2 {
+  margin-block: 0.5rem;
+}
+
+img {
+  margin-top: 2rem;
 }
