--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,7 @@ header {
   justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  background-image: url("https://www.transparenttextures.com/patterns/bright-squares.png");
   margin-top: 120px;
 }
 
